--- a/proj_suyeon.html
+++ b/proj_suyeon.html
@@ -2,13 +2,14 @@
 <head>
     <meta charset="utf-8">
 </head>
-<body>
+<body style="display:flex; flex-direction: column; max-width: 500px; width: 100%; margin: 0 auto">
     <h1 style="color:rgb(231, 124, 142)">안녕하세요, 김수연입니다.</h1>
-    <img src="./김수연.png" width="250px" height="200px">
-    <hr style="width:400px; margin-left:0; border-color: pink" >
+    <img src="./김수연.png" width="250px" height="200px" style="padding-left: 40px">
     <div style="color:#1f93ff; font-size:17px;">
-        <p>저는 올해 국민대학교 소프트웨어학과를 졸업했습니다.</p>
-        <p>프로그래머스 부트캠프에 참여하게 되어 기쁩니다.</p>
+        <div>
+            <p>저는 올해 국민대학교 소프트웨어학과를 졸업했습니다.</p>
+            <p>프로그래머스 부트캠프에 참여하게 되어 기쁩니다.</p>
+        </div>
         <br/>
         <p>제 Git 주소는 다음과 같습니다.</p>
         <ul>
@@ -25,5 +26,6 @@
             <li>웹 에이전시에서의 웹 퍼블리싱 경험</li>
             <li>AI 회사에서의 챗봇AI 학습용 구문 데이터 생성 및 태깅 경험</li>
         </ul>
+        <button style="border-radius: 5px; border: none; color: white; padding: 5px; background-color: #1f93ff; cursor: pointer" onclick="alert('읽어주셔서 감사합니다^^')">감사합니다!</button>
     </div>
 </body>
